// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerifyBackupPhrase should handle selection of all words 1`] = `
<div>
  <main
    class="container"
  >
    <a
      class="backButton"
      href="/account/create/backup"
    >
      Back
    </a>
    <h1>
      Check my Backup Phrase
    </h1>
    <h3>
      To make sure that no mistake has crept into your phrase, sort your backup phrase into the correct order
    </h3>
    <form>
      <div
        class="selectedWordsContainer"
      >
        <button
          class="button correct"
          type="button"
          value="5"
        >
          one
        </button>
        <button
          class="button correct"
          type="button"
          value="11"
        >
          two
        </button>
        <button
          class="button correct"
          type="button"
          value="9"
        >
          three
        </button>
        <button
          class="button correct"
          type="button"
          value="3"
        >
          four
        </button>
        <button
          class="button correct"
          type="button"
          value="2"
        >
          five
        </button>
        <button
          class="button correct"
          type="button"
          value="7"
        >
          six
        </button>
        <button
          class="button correct"
          type="button"
          value="6"
        >
          seven
        </button>
        <button
          class="button correct"
          type="button"
          value="0"
        >
          eight
        </button>
        <button
          class="button correct"
          type="button"
          value="4"
        >
          nine
        </button>
        <button
          class="button correct"
          type="button"
          value="8"
        >
          ten
        </button>
        <button
          class="button correct"
          type="button"
          value="1"
        >
          eleven
        </button>
        <button
          class="button correct"
          type="button"
          value="10"
        >
          twelve
        </button>
      </div>
      <hr />
      <button
        class="button"
        disabled=""
        type="button"
        value="0"
      >
        eight
      </button>
      <button
        class="button"
        disabled=""
        type="button"
        value="1"
      >
        eleven
      </button>
      <button
        class="button"
        disabled=""
        type="button"
        value="2"
      >
        five
      </button>
      <button
        class="button"
        disabled=""
        type="button"
        value="3"
      >
        four
      </button>
      <button
        class="button"
        disabled=""
        type="button"
        value="4"
      >
        nine
      </button>
      <button
        class="button"
        disabled=""
        type="button"
        value="5"
      >
        one
      </button>
      <button
        class="button"
        disabled=""
        type="button"
        value="6"
      >
        seven
      </button>
      <button
        class="button"
        disabled=""
        type="button"
        value="7"
      >
        six
      </button>
      <button
        class="button"
        disabled=""
        type="button"
        value="8"
      >
        ten
      </button>
      <button
        class="button"
        disabled=""
        type="button"
        value="9"
      >
        three
      </button>
      <button
        class="button"
        disabled=""
        type="button"
        value="10"
      >
        twelve
      </button>
      <button
        class="button"
        disabled=""
        type="button"
        value="11"
      >
        two
      </button>
      <p
        class="error"
      />
      <button
        type="submit"
      >
        Next Step
      </button>
    </form>
    <p>
      <a
        href="/"
      >
        Cancel
      </a>
    </p>
  </main>
</div>
`;

exports[`VerifyBackupPhrase should render 1`] = `
<div>
  <main
    class="container"
  >
    <a
      class="backButton"
      href="/account/create/backup"
    >
      Back
    </a>
    <h1>
      Check my Backup Phrase
    </h1>
    <h3>
      To make sure that no mistake has crept into your phrase, sort your backup phrase into the correct order
    </h3>
    <form>
      <div
        class="selectedWordsContainer"
      />
      <hr />
      <button
        class="button"
        type="button"
        value="0"
      >
        eight
      </button>
      <button
        class="button"
        type="button"
        value="1"
      >
        eleven
      </button>
      <button
        class="button"
        type="button"
        value="2"
      >
        five
      </button>
      <button
        class="button"
        type="button"
        value="3"
      >
        four
      </button>
      <button
        class="button"
        type="button"
        value="4"
      >
        nine
      </button>
      <button
        class="button"
        type="button"
        value="5"
      >
        one
      </button>
      <button
        class="button"
        type="button"
        value="6"
      >
        seven
      </button>
      <button
        class="button"
        type="button"
        value="7"
      >
        six
      </button>
      <button
        class="button"
        type="button"
        value="8"
      >
        ten
      </button>
      <button
        class="button"
        type="button"
        value="9"
      >
        three
      </button>
      <button
        class="button"
        type="button"
        value="10"
      >
        twelve
      </button>
      <button
        class="button"
        type="button"
        value="11"
      >
        two
      </button>
      <p
        class="error"
      />
      <button
        type="submit"
      >
        Next Step
      </button>
    </form>
    <p>
      <a
        href="/"
      >
        Cancel
      </a>
    </p>
  </main>
</div>
`;
